--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "4.3.1",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "gritter": "^1.7.4",
     "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
     "popper.js": "^1.16.1",
