--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDISCLOUD_URL") %>
-  channel_prefix: DevcampPortfolio_production
+  url: <%= ENV.fetch("REDISCLOUD") { "redis://localhost:6379/1" } %>
